--- a/templates/pages/bet_form_inner.html
+++ b/templates/pages/bet_form_inner.html
@@ -44,7 +44,7 @@
 						<span class="modal-subtitle">Cумма</span>
 						<div class="input-block">
 							<div class="input-block__wrap input-block__wrap-symbol">
-								<input style="text-align: center" type="number" onkeyup="checkB(this)" required name="amount">
+								<input class="dolbanyi-input" style="text-align: center" type="number" onkeyup="checkB(this)" required name="amount">
 								<svg class="rub-sign"  width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path opacity="0.8" d="M0 7H1V0H8.5C11 0 13 2 13 4.5C13 7 11 9 8.5 9H3V11H9V13H3V18H1V13H0V11H1V9H0V7ZM8.5 2H3V7H8.5C9.16304 7 9.79893 6.73661 10.2678 6.26777C10.7366 5.79893 11 5.16304 11 4.5C11 3.83696 10.7366 3.20107 10.2678 2.73223C9.79893 2.26339 9.16304 2 8.5 2V2Z" fill="#6B6B6B"/></svg>
 							</div>
 						</div>
