--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -64,7 +64,7 @@
 								<div class="input-block" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 									<label for="i-4">Телефон<span>*</span></label>
 									<div class="input-block__wrap">
-										<input id="i-4" type="text" name="{{ form.phone.name }}" placeholder="+7 964-123-45-67">
+										<input id="phone_3" type="text" name="{{ form.phone.name }}" placeholder="+7 964-123-45-67">
 									</div>
 								</div>
 							</div>
@@ -181,4 +181,25 @@
 
 {% block js %}
 {{ block.super }}
+      <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+    <script>
+        $.fn.setCursorPosition = function(pos) {
+            if ($(this).get(0).setSelectionRange) {
+                $(this).get(0).setSelectionRange(pos, pos);
+            } else if ($(this).get(0).createTextRange) {
+                var range = $(this).get(0).createTextRange();
+                range.collapse(true);
+                range.moveEnd('character', pos);
+                range.moveStart('character', pos);
+                range.select();
+            }
+        };
+
+
+        $("#phone_3").click(function(){
+            console.log('cc')
+            $(this).setCursorPosition(0);
+        }).mask("+7 (999) 999-99-99");
+
+        </script>
 {% endblock %}
