--- a/templates/cp/withdraw.html
+++ b/templates/cp/withdraw.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <!-- start personalArea -->
-    <section class="personalArea">
+    <section class="personalArea adminArea">
         <div class="personalArea-bg" style="background-image: url({% static 'img/personalArea-bg.svg' %});"></div>
         <div class="wrapper">
             {% include 'user/sidebar.html' %}
