--- a/templates/header_profile.html
+++ b/templates/header_profile.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- start header -->
-<header class="header header-second">
+<header class="header header-second {% if nonLK %}header-main{% endif %}">
     <div class="wrapper">
         <div class="header-logo">
             <a href="/">
