--- a/templates/basic.html
+++ b/templates/basic.html
@@ -39,6 +39,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="{% static 'js/scripts.min.js' %}"></script>
+{#    <script src="{% static 'js/scripts.js' %}"></script>#}
     <script src="{% static 'js/notifi.min.js' %}"></script>
 
 
@@ -51,6 +52,7 @@
             {% endfor %}
         {% endif %}
         let u_b = {{ request.user.balance }}
+
             function clearNotify () {
                 $.ajax({
                     type: "POST",
