--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,10 +17,10 @@
 				</ul>
 			</div>
 			<div class="footer-bottom">
-				<p><b>UGC</b>  Все права защищены. 2020.</p>
+				<p><b>UGS</b>  Все права защищены. 2020.</p>
 				<ul class="footer-list">
-					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="#">Terms and Conditions</a></li>
+					<li><a href="{% url 'policy' %}">Privacy Policy</a></li>
+					<li><a href="{% url 'rules' %}">Terms and Conditions</a></li>
 				</ul>
 			</div>
 		</div>
