--- a/templates/user/sidebar.html
+++ b/templates/user/sidebar.html
@@ -11,6 +11,7 @@
                 <li><a href="{% url 'cp_payments' %}" class="{{ profile_balance }}">Платежи</a></li>
                 <li><a href="{% url 'cp_messages' %}">Сообщения</a></li>
                 <li><a href="{% url 'cp_feedbacks' %}">Отзывы</a></li>
+                <li><a href="{% url 'cp_posts' %}">Посты</a></li>
                    <li><a href="{% url 'logout_page' %}">Выход
                 </a></li>
             </ul>
