--- a/templates/header_profile.html
+++ b/templates/header_profile.html
@@ -14,6 +14,7 @@
                     <li><a href="{% url 'index' %}">Главная</a></li>
                     <li><a href="{% url 'about' %}">О системе</a></li>
                     <li><a href="{% url 'feedbacks' %}">Отзывы</a></li>
+                    <li><a href="{% url 'posts' %}">Блог</a></li>
                     <li><a href="{% url 'contacts' %}">Контакты</a></li>
                     {% if request.user.is_superuser %}
                         <li><a href="{% url 'cp_users' %}">Админка</a></li>
