--- a/templates/user/sidebar.html
+++ b/templates/user/sidebar.html
@@ -82,10 +82,10 @@
             </ul>
         </div>
         <div class="sidebar-bottom">
-            <p><a href="{% url 'index' %}">UGC</a>  Все права защищены. 2020.</p>
+            <p><a href="{% url 'index' %}">UGS</a>  Все права защищены. 2020.</p>
             <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms and Conditions</a></li>
+               <li><a href="{% url 'policy' %}">Privacy Policy</a></li>
+					<li><a href="{% url 'rules' %}">Terms and Conditions</a></li>
             </ul>
         </div>
     </div>
