--- a/templates/basic.html
+++ b/templates/basic.html
@@ -21,6 +21,34 @@
     <meta name="theme-color" content="#000">
     <meta name="msapplication-navbutton-color" content="#000">
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
+    <meta name="interkassa-verification" content="bdd1793293b4141de486f37db46dad7d" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175075882-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-175075882-1');
+    </script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(66336922, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/66336922" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
+    <meta name="google-site-verification" content="88Wt95bIjImd3Z00W9aEi5yr4nFLFQTq-FV_hdnVy3I" />
+    <meta name="yandex-verification" content="fd3b2afc1d8058f2" />
 
 </head>
 <body>
@@ -39,7 +67,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="{% static 'js/scripts.min.js' %}"></script>
-{#    <script src="{% static 'js/scripts.js' %}"></script>#}
+    {#    <script src="{% static 'js/scripts.js' %}"></script>#}
     <script src="{% static 'js/notifi.min.js' %}"></script>
 
 
