--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -19,11 +19,11 @@
 				<div class="contacts-social" style="background-image: url({% static 'img/contacts-bg-2.svg' %});" data-aos="fade-left" data-aos-duration="500" data-aos-once="true">
 					<span class="contacts-subtitle">Мы в социальных сетях:</span>
 					<ul>
-						<li><a href="#">
+						<li><a target="_blank" href="https://telegram.im/@UGSCASH">
 							<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.65316 1.13865L8.54503 0.274445C8.92266 -0.0914816 9.53331 -0.0914816 9.90693 0.274445L17.7168 7.83822C18.0944 8.20415 18.0944 8.79586 17.7168 9.15789L9.90693 16.7256C9.52929 17.0915 8.91865 17.0915 8.54503 16.7256L7.65316 15.8613C7.27151 15.4915 7.27954 14.8881 7.66923 14.5261L12.5102 10.0571H0.964178C0.429863 10.0571 0 9.6406 0 9.12285V7.87715C0 7.3594 0.429863 6.94287 0.964178 6.94287H12.5102L7.66923 2.47389C7.27553 2.11186 7.26749 1.50847 7.65316 1.13865Z" fill="#F99422"/></svg>
 							Telegram
 						</a></li>
-						<li><a href="#">
+						<li><a target="_blank" href="https://wa.me/17605898093">
 							<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.65316 1.13865L8.54503 0.274445C8.92266 -0.0914816 9.53331 -0.0914816 9.90693 0.274445L17.7168 7.83822C18.0944 8.20415 18.0944 8.79586 17.7168 9.15789L9.90693 16.7256C9.52929 17.0915 8.91865 17.0915 8.54503 16.7256L7.65316 15.8613C7.27151 15.4915 7.27954 14.8881 7.66923 14.5261L12.5102 10.0571H0.964178C0.429863 10.0571 0 9.6406 0 9.12285V7.87715C0 7.3594 0.429863 6.94287 0.964178 6.94287H12.5102L7.66923 2.47389C7.27553 2.11186 7.26749 1.50847 7.65316 1.13865Z" fill="#F99422"/></svg>
 							Whatsapp
 						</a></li>
@@ -102,7 +102,7 @@
 							<div class="contacts-ico">
 								<img src="{% static 'img/contacts-ico-2.svg' %}" alt="">
 							</div>
-							<span class="contacts-title">+7 993 992 33 16</span>
+							<span class="contacts-title">+1 760-589-8093</span>
 							<p>Телефон</p>
 						</div>
 						<div class="contacts-block" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
