--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -23,9 +23,9 @@
 						</li>
 					</ul>
 				</div>
-				<p data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
+				<div data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
                     {{ post.text | safe }}
-                </p>
+                </div>
 
 
                 <div class="post-share" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
