--- a/templates/cp/post.html
+++ b/templates/cp/post.html
@@ -51,7 +51,7 @@
 
 {% block js %}
     {{ block.super }}
-    <script src="//cdn.ckeditor.com/4.14.1/standard/ckeditor.js"></script>
+    <script src="//cdn.ckeditor.com/4.14.1/full/ckeditor.js"></script>
     <script>
 
         CKEDITOR.replace( 'text' );
