add interkassa payments

--- a/templates/cp/post.html
+++ b/templates/cp/post.html
@@ -21,6 +21,8 @@
 
                             </select>
                     </h3>
+                     <h3 class="personalArea-title">TITLE: <input required class="admin-input" name="title"  type="text" value="{{ post.title }}"></h3>
+                        <h3 class="personalArea-title">DESCRIPTION: <textarea style="height: 200px;width: 400px" class="admin-input" required  name="description"  >{{ post.description }}</textarea></h3>
                     <h3 class="personalArea-title">Название: <input class="admin-input" name="name"  type="text" value="{{ post.name }}"></h3>
                      <h3 class="personalArea-title">Краткое описание: <textarea style="height: 200px;width: 400px" class="admin-input" required  name="short"  >{{ post.short_description }}</textarea></h3>
                         <h3 class="personalArea-title">Категория:
