--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -8,7 +8,7 @@
 			<div class="post-wrap">
 				<div class="post-img post-img__main" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<img src="{{ post.image_post.url }}" alt="">
-					<p class="post-title">{{ post.name }}</p>
+					<h2 class="post-title">{{ post.name }}</h2>
 				</div>
 				<div class="post-top" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
 					<span>Категория: <a href="#">{{ post.category.name }}</a></span>
