--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,60 @@
 {% load static %}
 <!-- start header -->
+<script type="application/ld+json">
+{
+ "@context": "http://schema.org",
+ "@type": "BreadcrumbList",
+ "itemListElement":
+ [
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "item":
+   {
+    "@id": "{% url 'index' %}",
+    "name": "Главная"
+    }
+  },
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "item":
+   {
+    "@id": "{% url 'about' %}",
+    "name": "О системе"
+    }
+  },
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "item":
+   {
+    "@id": "{% url 'feedbacks' %}",
+    "name": "Отзывы"
+    }
+  },
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "item":
+   {
+    "@id": "{% url 'posts' %}",
+    "name": "Блог"
+    }
+  },
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "item":
+   {
+    "@id": "{% url 'contacts' %}",
+    "name": "Контакты"
+    }
+  }
+
+ ]
+}
+</script>
 <header class="header">
     <div class="wrapper">
        <div class="header-logo">
