--- a/templates/header.html
+++ b/templates/header.html
@@ -11,43 +11,43 @@
    "position": 1,
    "item":
    {
-    "@id": "{% url 'index' %}",
+    "@id": "https://ugscash.ru{% url 'index' %}",
     "name": "Главная"
     }
   },
   {
    "@type": "ListItem",
-   "position": 1,
+   "position": 2,
    "item":
    {
-    "@id": "{% url 'about' %}",
+    "@id": "https://ugscash.ru{% url 'about' %}",
     "name": "О системе"
     }
   },
   {
    "@type": "ListItem",
-   "position": 1,
+   "position": 3,
    "item":
    {
-    "@id": "{% url 'feedbacks' %}",
+    "@id": "https://ugscash.ru{% url 'feedbacks' %}",
     "name": "Отзывы"
     }
   },
   {
    "@type": "ListItem",
-   "position": 1,
+   "position": 4,
    "item":
    {
-    "@id": "{% url 'posts' %}",
+    "@id": "https://ugscash.ru{% url 'posts' %}",
     "name": "Блог"
     }
   },
   {
    "@type": "ListItem",
-   "position": 1,
+   "position": 5,
    "item":
    {
-    "@id": "{% url 'contacts' %}",
+    "@id": "https://ugscash.ru{% url 'contacts' %}",
     "name": "Контакты"
     }
   }
